# bmcps

./: .gitignore  CMakeLists.txt  build.sh  readme.md
.cursor/: mcp.json
documentation/: developer.md
scripts/: cursor-mcp-autorun-fix.sh
source/: main.cpp
source/browser/: browser_driver_abi.hpp
source/browser/cdp/: cdp_chrome_launch.cpp  cdp_chrome_launch.hpp  cdp_driver.cpp  cdp_driver.hpp
source/mcp/: mcp_dispatch.cpp  mcp_stdio.cpp  mcp_tools.cpp  mcp_tools.hpp
source/platform/: platform_abi.hpp
source/platform/linux/: platform_linux.cpp
source/protocol/: json_rpc.cpp  json_rpc.hpp
source/tool_handlers/: tool_accept_dialog.cpp  tool_capture_screenshot.cpp  tool_clear_cookies.cpp  tool_click_at_coordinates.cpp  tool_click_element.cpp  tool_close_browser.cpp  tool_close_tab.cpp  tool_dismiss_dialog.cpp  tool_double_click_element.cpp  tool_drag_and_drop.cpp  tool_drag_from_to.cpp  tool_evaluate_javascript.cpp  tool_fill_field.cpp  tool_get_clipboard.cpp  tool_get_console_messages.cpp  tool_get_cookies.cpp  tool_get_dialog_message.cpp  tool_get_element_bounding_box.cpp  tool_get_navigation_history.cpp  tool_get_network_requests.cpp  tool_get_outer_html.cpp  tool_get_page_source.cpp  tool_get_storage.cpp  tool_handlers.cpp  tool_handlers.hpp  tool_hover_element.cpp  tool_is_visible.cpp  tool_key_down.cpp  tool_key_press.cpp  tool_key_up.cpp  tool_list_frames.cpp  tool_list_interactive_elements.cpp  tool_list_tabs.cpp  tool_navigate.cpp  tool_navigate_back.cpp  tool_navigate_forward.cpp  tool_new_tab.cpp  tool_open_browser.cpp  tool_refresh.cpp  tool_resize_browser.cpp  (+16 more)
source/utils/: debug_log.cpp  debug_log.hpp  utf8_sanitize.cpp  utf8_sanitize.hpp
tests/: CMakeLists.txt  test_navigate.cpp  test_open_browser.cpp  test_runner.cpp  test_smoke_e2e.cpp
